# smith

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
