[tool.poetry]
name = "smith"
version = "0.1.0"
description = ""
authors = ["Geoff Johnson <geoff.jay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.11"
langchain-core = "^0.2.25"
langchain-community = "^0.2.10"
langgraph = "^0.1.17"
langsmith = "^0.1.94"
transformers = "^4.43.3"
torch = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^24.4.2" }
isort = "^5.13.2"
pre-commit = "^3.8.0"
bandit = "^1.7.9"
jupyter = "^1.0.0"
jupyterlab = "^4.2.4"
jupyterlab-lsp = "^5.1.0"
ruff = "^0.5.5"
mypy = "^1.11.1"
python-language-server = "^0.36.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
  | \.eggs
  | \.git
  | \.tox
  | \.venv
  | _build
  | build
  | changelog
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
line_length = 120
known_first_party = []
include_trailing_comma = true
order_by_type = false
skip = [".venv"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",  # Missing type annotation for {name} in method
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
  "COM812",  # Missing trailing comma in a dictionary
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D104",    # Missing docstring in public package
  "D107",    # Missing docstring in __init__
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "D401",    # First line of docstring should be in imperative mood
  "D402",    # First line should not be the function's signature
  "ISC001",  # Use of assert detected
  "PD901",   # df is a bad variable name. Be kinder to your future self.
  "PLW0603", # Using the global statement to update `X` is discouraged
  "S101",    # Use of assert detected
  "SLF001",  # Private member accessed
  "T20",     # flake8-print
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001"]
".github/*" = ["INP001"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.12"
